style: fix alignment of the screen and bottom border

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .main-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 20px;
   width: 100%;
   max-width: 400px;
@@ -75,7 +76,7 @@
 
 .button-container button {
   background-color: #07b0fb;
-  border: 0px;
+  border: 0px transparent;
   color: #ffffff;
   border-radius: 100px;
   height: 48px;
